--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
         <div class="menu">
             <h2 id="logo">Stevon K</h2>
             <a href="#">Home</a>
-            <a href="#">About me</a>
+            <a href="#">Introduction</a>
             <a href="#">Projects</a>
             <a href="#">Blog</a>
         </div>
-        
-        <div class="wrapper">
-            <div class="static-txt">I'm a</div>
-            <ul class="dynamic-txts">
-            <li><span>Developer</span></li>
-            <li><span>Designer</span></li>
-            <li><span>Youtuber</span></li></ul>
+
+        <div class="text-box">
+        <p>Hi, my name is</I></p>     
+        <h1>Stevon Keel</h1>
+        <p>Brings ideas to life with code</p>
+        <p>Full stack developer. Blogger. Content creator.</p>   
         </div>
+        
     </div>
 </body>
 </html>
