--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
 <body>
     <div class="main">
         <div class="menu">
-            <h2 id="logo">Stevon K</h2>
-            <a href="#">Home</a>
-            <a href="#">Introduction</a>
-            <a href="#">Projects</a>
-            <a href="#">Blog</a>
+            <img class="resize" src="logo.png">
+            <e href="#">01</e><a href="#">Home</a>
+            <e href="#">02</e><a href="#">Writing</a>
+            <e href="#">03</e> <a href="#">Code</a>
+            <e href="#">04</e><a href="#">About</a>
+            <e href="#">05</e><a href="#">Contact</a>
         </div>
 
         <div class="text-box">
-        <p>Hi, my name is</I></p>     
+        <e>Hi, my name is</e>     
         <h1>Stevon Keel</h1>
         <p>Brings ideas to life with code</p>
-        <p>Full stack developer. Blogger. Content creator.</p>   
+        <p>Full stack developer. Blogger. Content creator. Freelancer.</p>   
         </div>
-        
     </div>
 </body>
 </html>
