--- a/writing.html
+++ b/writing.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>SK Portfolio</title>
+    <title>Hey, I'm Stevon!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main">
         <div class="menu">
             <img class="resize" src="logo.png">
-            <e href="#">01</e><a href="#">Home</a>
-            <e href="#">02</e><a href="#">Writing</a>
-            <e href="#">03</e> <a href="#">Code</a>
-            <e href="#">04</e><a href="#">About</a>
-            <e href="#">05</e><a href="#">Contact</a>
+            <e href="#">01</e><a href="index.html">Home</a>
+            <e href="#"">03</e> <a href="code.html">Code</a>
+            <e href="#">04</e><a href="about.html">About</a>
+            <e href="#">05</e><a href="contact.html">Contact</a>
         </div>
 
         <div class="text-box">
         <e>Hi, my name is</e>     
-        <h1>Stevon Keel</h1>
+        <h1>Stevon</h1>
+        <h1>Keel</h1>
         <p>Brings ideas to life with code</p>
         <p>Full stack developer. Blogger. Content creator. Freelancer.</p>   
         </div>
