--- a/resume.html
+++ b/resume.html
@@ -16,23 +16,28 @@
         <div class="menu">
             <img class="resize" src="logo.png">
             <div class="social-media">
-            <a href="https://www.linkedin.com/in/stevon-keel-97956b224/"><ion-icon name="logo-linkedin"></ion-icon>
-                <a href="https://github.com/Botushka"><ion-icon name="logo-github"></ion-icon></a>
-                <a href="https://www.instagram.com/stevon.keel/"><ion-icon name="logo-instagram"></ion-icon></a>
-                <a href="https://twitter.com/Tiedexoxo"><ion-icon name="logo-twitter"></ion-icon></a>
+                <a href="https://www.linkedin.com/in/stevon-keel-97956b224/"><ion-icon name="logo-linkedin"></ion-icon>
+                    <a href="https://github.com/Botushka"><ion-icon name="logo-github"></ion-icon></a>
+                    <a href="https://www.instagram.com/stevon.keel/"><ion-icon name="logo-instagram"></ion-icon></a>
+                    <a href="https://twitter.com/Tiedexoxo"><ion-icon name="logo-twitter"></ion-icon></a>
+                </div>
+                <div class="navbar">
+                    <e href="#"></e><a href="resume.html">Resume</a>
+                    <e href="#""></e> <a href="code.html">Code</a>
+                    <e href="#"></e><a href="about.html">About</a>
+                    <e href="#"></e><a href="contact.html">Contact</a>
+                </div>
+                <a href="#" class="toggle-button">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </a>
             </div>
-            <div class="Navbar">
-            <e href="#">01</e><a href="resume.html">Resume</a>
-            <e href="#"">02</e> <a href="code.html">Code</a>
-            <e href="#">03</e><a href="about.html">About</a>
-            <e href="#">04</e><a href="contact.html">Contact</a>
-            </div>
-        </div>
-    <div class="text-box">
+            <div class="text-box">
             <div class="text-box-all">  
         <h1>Resume</h1>
         <p>Howdy! My name is Stevon Keel, 21 years old and I'm a first year computer science student</p>
-        <p>in Helsinki university. I mainly write Java code but I also do front end for fun</p>
+        <p>in Helsinki university. I mainly write Java code but I also do front end for fun.</p>
         <p>Main operating systems I use are linux arch and windows.</p>
         <div class="text-box-left-right" data-aos="fade-up" data-aos-delay="500" data-aos-duration="2000"> 
         <div class="text-box-left" >
@@ -43,9 +48,10 @@
             <p>plugins. Main tools are Java, Git, Spigot and Maven.</p>
             <br>
             <h3>Web Development</h3>
-            <p>6+ months of experience using HTML/CSS/JS/Jquery to make websites </p>
+            <p>6+ months of experience using HTML/CSS to make websites </p>
             <p>for personal use and trying different styles, features and</p>
-            <p>animation  while keeping responsive web desing in mind. </p>
+            <p>animation  while keeping responsive web desing in mind.
+                <p>Experience: HTML, CSS, SASS/SCSS, JS, Jquery</p>
             
         </div>        
         <div class="text-box-right">
@@ -62,9 +68,10 @@
         </div>
     </div>
 </div>
-<div class="wrapper" data-aos="slide-up" data-aos-delay="500" data-aos-duration="2000">
+        <div class="wrapper" data-aos="slide-up" data-aos-delay="500" data-aos-duration="2000" data-aos-once="true">
             <h1>Code</h1>
             <p>Some of my favorite projects listed</p>
+            <h2>Spigot</h2>
                 <div class="carousel owl-carousel">
                     <div class="card card-1">ForgedKits</div>
                     <div class="card card-2">ForgedSpawn</div>
@@ -73,27 +80,29 @@
                     <div class="card card-5">ForgedHousing</div>
                 </div>
                 <div class="code-links-java">
-                    <div class="carousel owl-carousel">
-                        <div class="card card-6">A</div>
-                        <div class="card card-7">B</div>
-                        <div class="card card-8">C</div>
-                        <div class="card card-9">D</div>
-                        <div class="card card-10">E</div>
-                    </div>
                 </div>
+            </div>
+            <div class="about-me" data-aos="fade-up" data-aos-delay="100" data-aos-duration="2000" data-aos-once="true">
+                <div class="img"></div>
+                <div class="abouttxt">About me</div>
+                <button>click me</button>
             </div>
     </div> 
     </div>
     </div>
+
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-    <script type="text/javascript"> 
-        window.addEventListener("scroll", function(){
-            var menu = document.querySelector("menu");
-            menu.classList.toggle("sticky", window.scrollY > 0) 
-        })
+   
+    <script>
+        $(window).on('scroll', function(){
+            if($(window).scrollTop()){
+                $('main').addClass('active');
+            }else{
+                $('menu').removeClass('active');
+            }
+        });
     </script>
-
     <script>
         $(".carousel").owlCarousel({
             margin: 10,
