--- a/resume.html
+++ b/resume.html
@@ -83,10 +83,13 @@
                 </div>
             </div>
             <div class="about-me" data-aos="fade-up" data-aos-delay="100" data-aos-duration="2000" data-aos-once="true">
-                <div class="img"></div>
-                <div class="abouttxt">About me</div>
-                <button>click me</button>
-            </div>
+                <div class="about-txt">About me
+                    <div class="button">
+                        <button>click me</button>
+                    </div>
+
+                </div>
+                </div>
     </div> 
     </div>
     </div>
