--- a/resume.html
+++ b/resume.html
@@ -41,11 +41,16 @@
         <p>Main operating systems I use are linux arch and windows.</p>
         <div class="text-box-left-right" data-aos="fade-up" data-aos-delay="500" data-aos-duration="2000"> 
         <div class="text-box-left" >
-            
+            <br>
             <h2>Summary</h2>
-            <h3>Minecraft Spigot</h3>
-            <p>1 year of experience in hosting, designing, updating servers and </p>
-            <p>plugins. Main tools are Java, Git, Spigot and Maven.</p>
+            <br>
+            <br>
+            <h3>Java</h3>
+            <p>1 year of experience coding in Java language. </p>
+            <p>Completed MOOC.fi java beginner and advanced courses.</p>
+            <p>Creating minecraft plugins for 6 months.</p>
+            <p>Experience: Java, Git, Spigot/Bukkit, Maven, NMS</p>
+            <br>
             <br>
             <h3>Web Development</h3>
             <p>6+ months of experience using HTML/CSS to make websites </p>
@@ -61,6 +66,7 @@
             <p>Studying computer science bachelor and masters degree (3y+2y).</p>
             <p>Currently in my first year.</p>
             <br>
+            <br>
             <h3>Lumo High School</h3>
             <h5>2017-2020</h5>
             <p>Finnish matriculation examination  completed successfully in 2020</p>
@@ -69,8 +75,12 @@
     </div>
 </div>
         <div class="wrapper" data-aos="slide-up" data-aos-delay="500" data-aos-duration="2000" data-aos-once="true">
+            <br>
+            <br>
             <h1>Code</h1>
             <p>Some of my favorite projects listed</p>
+            <br>
+            <br>
             <h2>Spigot</h2>
                 <div class="carousel owl-carousel">
                     <div class="card card-1">ForgedKits</div>
